--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,25 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer base {
+    :root {
+        --bg-color: #ffffff;
+        --color-text-primary: #121212;
+        --color-text-secondary: #2a2a2a;
+        --color-text-tertiary: #717171;
+        --color-text-link: #485bff;
+    }
 
-:root {
-  --bg-color: #ffffff;
-  --color-text-primary: #121212;
-  --color-text-secondary: #2a2a2a;
-  --color-text-tertiary: #717171;
-  --color-text-link: #485bff;
+    :root[class~="dark"] {
+        --bg-color: #121212;
+        --color-text-primary: #ffffff;
+        --color-text-secondary: #d0d0d0;
+        --color-text-tertiary: #a0a0a0;
+        --color-text-link: #b6bdff;
+    }
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --bg-color: #121212;
-    --color-text-primary: #ffffff;
-    --color-text-secondary: #d0d0d0;
-    --color-text-tertiary: #a0a0a0;
-    --color-text-link: #b6bdff;
-  }
-}
-
 body {
-  @apply mx-600 antialiased bg-page;
+    @apply mx-600 bg-page antialiased;
 }
