--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,7 +1,7 @@
 .intro {
-  @apply h-[540px] w-full;
+    @apply h-[540px] w-full;
 }
 
 .map {
-  @apply h-[540px] w-[500px] object-cover z-10;
+    @apply pointer-events-none;
 }
