--- a/src/components/Home/Projects/Projects.module.css
+++ b/src/components/Home/Projects/Projects.module.css
@@ -1,9 +1,9 @@
 .projects {
-    @apply mt-[750px] flex flex-col gap-[96px];
+    @apply mt-[700px] flex flex-col gap-[96px] pt-[50px];
 }
 
 .body {
-    @apply flex justify-center gap-[115px];
+    @apply flex items-center justify-center gap-[115px];
 }
 
 .subheading {
