--- a/src/ui/Typography/Typography.module.css
+++ b/src/ui/Typography/Typography.module.css
@@ -8,7 +8,7 @@
 }
 
 .heading1 {
-    @apply text-[3rem] leading-[64px];
+    @apply text-[2rem] leading-[44px] lg:text-[3rem] lg:leading-[64px];
 }
 
 .heading2 {
@@ -16,15 +16,15 @@
 }
 
 .heading3 {
-    @apply text-[2rem] leading-[44px];
+    @apply text-[1.5rem] leading-[34px] lg:text-[2rem] lg:leading-[44px];
 }
 
 .subheading {
-    @apply text-[1.5rem] leading-[34px];
+    @apply text-[18px] leading-[28px] lg:text-[1.5rem] lg:leading-[34px];
 }
 
 .body {
-    @apply text-[1.125rem] leading-[28px];
+    @apply text-base leading-[24px] lg:text-[1.125rem] lg:leading-[28px];
 }
 
 .caption {
