--- a/src/components/Home/ProjectCard/Project.module.css
+++ b/src/components/Home/ProjectCard/Project.module.css
@@ -1,5 +1,5 @@
 .card {
-    @apply flex flex-col-reverse gap-[1.5rem] py-10 lg:h-[630px] lg:flex-row lg:gap-[96px];
+    @apply flex flex-col-reverse gap-[1.5rem] py-10 lg:h-[630px] lg:flex-row lg:justify-between;
 }
 
 .content {
@@ -11,5 +11,9 @@
 }
 
 .base {
-    @apply relative mx-auto flex aspect-square max-h-[500px] w-full max-w-[500px] flex-col items-center justify-center rounded-2xl lg:h-[550px] lg:w-[550px];
+    @apply relative mx-auto flex aspect-square max-h-[630px] w-full max-w-[630px] flex-col items-center justify-center rounded-2xl lg:h-[550px] lg:w-[550px];
+}
+
+.base > img {
+    @apply mx-auto max-h-[500px] max-w-[500px] transition-transform duration-300;
 }
