--- a/src/app/(pages)/blog/[slug]/BlogPage.module.css
+++ b/src/app/(pages)/blog/[slug]/BlogPage.module.css
@@ -3,15 +3,16 @@
 }
 
 .blog {
-  @apply @container/blog flex mt-[4rem] justify-between;
+  @apply @container/blog flex mt-[2rem] justify-between;
 }
 
 .article {
   @apply basis-2/4 flex flex-col overflow-y-scroll overscroll-y-contain;
+  height: calc(100vh - 9rem);
 }
 
 .poster {
-  @apply w-full max-w-[450px] aspect-square relative bg-white rounded-lg;
+  @apply w-full max-w-[450px] aspect-square relative bg-white rounded-lg flex-shrink-0;
 }
 
 .poster > img {
