--- a/src/_components/Home/Blogs/Blogs.module.css
+++ b/src/_components/Home/Blogs/Blogs.module.css
@@ -1,5 +1,5 @@
 .blogs {
-  @apply pt-[50px] flex flex-col;
+  @apply mt-[78px] lg:mt-[206px] pt-[50px] flex flex-col;
 }
 
 .title {
@@ -8,6 +8,8 @@
 
 .gridContainer {
   @apply relative;
+  min-height: 380px;
+  max-height: calc(380px * 2);
 }
 
 .bloggrid {
@@ -16,6 +18,8 @@
 
 .card {
   @apply w-[500px] h-[350px] p-[4rem] m-auto flex flex-col gap-[1.5rem];
+  @apply transition-all duration-300 ease-in-out rounded-xl;
+  @apply hover:shadow-lg hover:scale-105 cursor-pointer;
 }
 
 .index {
