Update Footer and Blogs styles, add new blog post, and fix file path in API module

--- a/src/_components/Footer/Footer.module.css
+++ b/src/_components/Footer/Footer.module.css
@@ -1,5 +1,5 @@
 .footer {
-  @apply min-h-[350px] py-[8rem] flex flex-col justify-center items-center gap-6;
+  @apply min-h-[150px] lg:min-h-[350px] py-[2rem] lg:py-[8rem] flex flex-col justify-center items-center gap-4 lg:gap-6;
 }
 
 .socials {
