--- a/src/_components/Home/ProjectCard/Project.module.css
+++ b/src/_components/Home/ProjectCard/Project.module.css
@@ -1,19 +1,19 @@
 .card {
-    @apply flex flex-col-reverse gap-[1.5rem] py-10 lg:h-[630px] lg:flex-row lg:justify-between;
+  @apply flex flex-col-reverse gap-[1.5rem] py-10 lg:h-[630px] lg:flex-row lg:justify-between;
 }
 
 .content {
-    @apply flex h-full basis-[50%] flex-col items-center justify-center lg:items-start;
+  @apply flex h-full basis-[50%] flex-col items-center justify-center lg:items-start;
 }
 
 .description {
-    @apply text-secondary mt-4 text-center lg:text-left;
+  @apply text-secondary mt-4 text-center lg:text-left;
 }
 
 .base {
-    @apply relative mx-auto flex aspect-square max-h-[630px] w-full max-w-[630px] flex-col items-center justify-center rounded-2xl lg:h-[550px] lg:w-[550px];
+  @apply relative mx-auto aspect-square max-h-[630px] w-full max-w-[630px] items-center justify-center rounded-2xl lg:h-[550px] lg:w-[550px];
 }
 
 .base > img {
-    @apply m-auto max-h-[500px] max-w-[500px] transition-transform duration-300;
+  @apply m-auto max-h-[500px] max-w-[500px] transition-transform duration-300;
 }
